<resources>
    <string name="app_name">PlayerLink</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_games">Save Games</string>
    <string name="are_you_sure_you_want_to_save_the_selected_games_you_can_change_it_later_in_your_profile">Are you sure you want to save the selected games?\n you can change it later in your profile</string>
    <string name="save">Save</string>
    <string name="games_saved">Games saved</string>
    <string name="error_saving_games">Error saving games</string>
    <string name="error_fetching_users">Error fetching users</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_username">Change Username</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="cancel">Cancel</string>
    <string name="start_chatting">start chatting</string>
    <string name="pick_the_games_that_you_play">Pick the games that you play</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
    <string name="welcome_to_playerlink_n_login">Welcome to PlayerLink \n Login</string>
    <string name="login">Login</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="update_games">Update games</string>
    <string name="welcome_to_playerlink_n_register">Welcome to PlayerLink \n Register</string>
    <string name="name">Name</string>
    <string name="rating">rating</string>
    <string name="search_players">Search players</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_message">Are you sure you want to delete this message?</string>
</resources>