<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/change_username"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_username"
        android:layout_gravity="center"
        android:id="@+id/newUsername_editText"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:layout_marginRight="5dp"
            android:id="@+id/cancel_btn"
            android:layout_marginBottom="10dp"/>

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/black"
            android:layout_marginLeft="5dp"
            android:id="@+id/saveUsername_btn"
            android:layout_marginBottom="10dp"/>



    </LinearLayout>







</LinearLayout>