<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.ProfileFragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/change_image_btn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="90dp"
            android:paddingTop="20dp"
            android:textColor="@color/primaryTextColor"
            android:text="@string/change_profile_picture"
            android:layout_weight="0.1"/>

        <ImageView
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/profilePicture"/>


    </LinearLayout>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/change_Username_btn"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:text="@string/change_username"/>

    <Button
        android:backgroundTint="#B2FFFFFF"
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/update_game_btn"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:text="@string/update_games"/>

    <Button
        android:backgroundTint="#B2FFFFFF"
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/sign_out_btn"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:text="@string/sign_out"/>

    <ProgressBar
        android:id="@+id/loadingProgressbar"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>